--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,41 @@
-# OS Files
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
-desktop.ini
+*.pem
 
-# Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Logs
-*.log
+# debug
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# Environment variables
-.env
-.env.local
+# env files (can opt-in for committing if needed)
+.env*
 
-# Build files (if you add a build process later)
-dist/
-build/
-.cache/
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
